<resources>
    <string name="app_name">Jempol Peduli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="settings">Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="edit_username">Edit Username</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_desc">//TODO: Logo deskripsi</string>
    <string name="show_password">Show Password</string>
    <string name="your_web_client_id">332945249997-urlspjipgcdjmicjatnvaqvnumsss97j.apps.googleusercontent.com</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="or">OR</string>
    <string name="menu_donation">Donation</string>
    <string name="menu_profile">Profile</string>
    <string name="fragment_campaign">Campaign</string>
    <string name="fragment_inbox">Inbox\n</string>
    <string name="image_desc">image_desc</string>
    <string name="profile_picture">profile_picture</string>
    <string name="verified_badge">verified_badge</string>
    <string name="button1">button1</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="app_version">app_version</string>
    <string name="todo">TODO</string>
</resources>