<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nandurstudio.jempolpeduli.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.nandurstudio.jempolpeduli.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_donation"
        android:name="com.nandurstudio.jempolpeduli.ui.donation.DonationFragment"
        android:label="@string/menu_donation"
        tools:layout="@layout/fragment_donation" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.nandurstudio.jempolpeduli.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_campaign"
        android:name="com.nandurstudio.jempolpeduli.ui.campaign.CampaignFragment"
        android:label="@string/fragment_campaign"
        tools:layout="@layout/fragment_campaign" />

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.nandurstudio.jempolpeduli.ui.inbox.InboxFragment"
        android:label="@string/fragment_inbox"
        tools:layout="@layout/fragment_inbox" />
</navigation>